portainer/portainer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer
  namespace: portainer
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.tls.domains.0.main: "lab.jjh.us"
    traefik.ingress.kubernetes.io/router.tls.domains.0.sans: "*.lab.jjh.us"
spec:
  tls:
    - hosts:
        - portainer.lab.jjh.us
  rules:
    - host: portainer.lab.jjh.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer
                port:
                  number: 9000
